@@ -355,6 +355,10 @@ Extension modules
 Library
 -------
 
+- gzip.py now handles files exceeding 2GB.  Note that 4GB is still a
+  fundamental limitation of the underlying gzip file format (it only
+  has 32 bits to record the file size).
+
 - xml.sax.saxutils.unescape has been added, to replace entity references
   with their entity value.
 
@@ -365,7 +369,7 @@ Library
 
 - Various configure methods of Tkinter have been stream-lined, so that
   tag_configure, image_configure, window_configure now return a
-  dictionary when invoked with no argument. 
+  dictionary when invoked with no argument.
 
 - Importing the readline module now no longer has the side effect of
   calling setlocale(LC_CTYPE, "").  The initial "C" locale, or
